<resources>
    <string name="app_name">E-Home</string>
    <string name="p_gina_principal">Página Principal</string>
    <string name="inicie_sesi_n">Inicie sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tiene_cuenta">¿No tiene cuenta?</string>
    <string name="registrarse">Registrarse</string>
    <string name="todo">TODO</string>
    <string name="logo">logo</string>
    <string name="registro">Registro</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="usuario1">Usuario</string>
    <string name="contrase_a2">Contraseña</string>
    <string name="registrarse2">Registrarse</string>
    <string name="volver">Volver</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="control_de_iluminaci_n">Control de iluminación</string>
    <string name="cuarto">Cuarto</string>
    <string name="logp">logp</string>
    <string name="dispositivos_disponibles">Dispositivos Disponibles</string>
    <string name="estado">Estado</string>
    <string name="sala">Sala</string>
    <string name="habitaci_n">Habitación</string>
    <string name="cocina">Cocina</string>
    <string name="ba_o">Baño</string>
    <string name="foc">foc</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="by_grupo_8_pst">By Grupo 8 PST</string>
    <string name="ingrese_sus_datos">Ingrese sus datos</string>
</resources>