<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/control_de_iluminaci_n"
        android:textColor="#B87440"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/estado"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/sala"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/habitaci_n"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/cocina"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/ba_o"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="114dp"
        android:layout_height="118dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/foc"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dee32a068e822243e28b5716a6879f28" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="220dp"
        android:background="#FFFFFF"
        android:onClick="botonA"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/on" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="45dp"
        android:background="#FFFFFF"
        android:onClick="botonG"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/on" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="45dp"
        android:background="#FFFFFF"
        android:onClick="botonC"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="@drawable/on" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="45dp"
        android:background="#FFFFFF"
        android:onClick="botonE"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        app:srcCompat="@drawable/on" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="100dp"
        android:background="#FFFFFF"
        android:onClick="botonB"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/off" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="100dp"
        android:background="#FFFFFF"
        android:onClick="botonH"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:srcCompat="@drawable/off" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="100dp"
        android:background="#FFFFFF"
        android:onClick="botonD"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8"
        app:srcCompat="@drawable/off" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="100dp"
        android:background="#FFFFFF"
        android:onClick="botonF"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9"
        app:srcCompat="@drawable/off" />

</androidx.constraintlayout.widget.ConstraintLayout>